# odoo-claude

./: .env.example  claude_desktop_config.json  pyproject.toml  server.py
